--- a/styles-php.css
+++ b/styles-php.css
@@ -1,18 +1,28 @@
+@charset "utf-8";
+html { box-sizing: border-box; }
+*, *:before, *:after { box-sizing: inherit; }
+
 body {
-	/*background-image: url('Eva-Tree-Wallpaper.jpg'); */
-	/*background-size: cover;*/
-	
 	height: 100%;
 	margin: 0px;
-	/*background: url('backgrounds/rotate.php') no-repeat center center;*/
 	background: #282828 url('backgrounds/rotate.php') no-repeat center center;
 	background-size: cover;
 	background-attachment: fixed;
-	
 	padding: 0;
 	font-family: 'Raleway', sans-serif;
-	
 	color: #dddddd;
+	
+	-webkit-animation: fadeIn .25s ease-in .5s 1 both;
+	animation:         fadeIn .25s ease-in .5s 1 both;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+	font-size: 16px;
+	display: flex;
+	height: 100vh;
+	color: #aaa;
+	opacity: 0;
+	
 }
 
 
@@ -44,7 +54,7 @@ body {
 	border-spacing: 26px;
 }
 
-.box {
+.JADbox {
 	display: table-cell;
 	width: 33.3%;
 	height: 240px;
@@ -161,3 +171,100 @@ ul {
 
 li div { text-align:right; }
 li div span { float:left; }
+
+
+ul.box {
+    background-color: rgba(0, 0, 0, .75);
+	list-style: none;
+	display: block;
+	width: 40%;
+	padding: 0;
+	margin: 0;
+}
+
+ul.newBox {
+	display: block;
+	width: 40%;
+	text-align: center;
+	background-color: #000000;
+	border: 10px solid #000080;
+	outline: #f2f2f2  solid 4px;
+	padding: 0;
+	margin: 0;
+	-webkit-box-shadow: 7px 7px 5px 1px rgba(0,0,0,0.6);
+	-moz-box-shadow: 7px 7px 5px 1px rgba(0,0,0,0.6);
+	box-shadow: 7px 7px 5px 1px rgba(0,0,0,0.6);
+    opacity: .85;
+	font-family: "Raleway", "Times New Roman", Times, sans-serif;
+}
+
+
+
+ul.subMenu {
+	list-style: none;
+	display: block;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+}
+a {
+	-webkit-transition: all .125s;
+	transition:         all .125s;
+	text-decoration: none;
+	display: block;
+	outline: none;
+	padding: 10px;
+	color: #fff;
+}
+a:after {
+    -webkit-transform: translateX(-20px);
+    transform:         translateX(-20px);
+	-webkit-transition: all .125s;
+	transition:         all .125s;
+	content: "→";
+	opacity: 0;
+}
+a:hover:after, a.active:after {
+    -webkit-transform: translateX(0);
+	transform:         translateX(0);
+	-webkit-transition: all .125s;
+	transition:         all .125s;
+	padding-left: 6px;
+	opacity: 1;
+}
+p {
+	padding: 10px;
+	margin: 0;
+}
+
+span    { color: #aaa; }
+.left   { float: left; }
+.clear  { clear: both; }
+.right  { float: right; }
+.center { text-align: center; }
+div.right, div.left { width: 50%; }
+
+
+
+ul > li:hover > a#parent1, a.tab1, a.tab1:hover, a#parent1:hover, a#parent1.active { background-color: #336666; }
+ul > li:hover > a#parent2, a.tab2, a.tab2:hover, a#parent2:hover, a#parent2.active { background-color: #663333; }
+ul > li:hover > a#parent3, a.tab3, a.tab3:hover, a#parent3:hover, a#parent3.active { background-color: #336633; }
+ul > li:hover > a#parent4, a.tab4, a.tab4:hover, a#parent4:hover, a#parent4.active { background-color: #663366; }
+ul > li:hover > a#parent5, a.tab5, a.tab5:hover, a#parent5:hover, a#parent5.active { background-color: #84AED0; }
+ul > li:hover > a#parent6, a.tab6, a.tab6:hover, a#parent6:hover, a#parent6.active { background-color: #666633; }
+a#parent1:after, a#parent2:after, a#parent3:after, a#parent4:after, a#parent5:after, a#parent6:after { content: "↓"; }
+a#parent1.active:after, a#parent2.active:after, a#parent3.active:after, a#parent4.active:after, a#parent5.active:after, a#parent6.active:after { content: "↑"; }
+ul > li:hover > a#parent1, ul > li:hover > a#parent2, ul > li:hover > a#parent3, ul > li:hover > a#parent4, ul > li:hover > a#parent5, ul > li:hover > a#parent6, a:hover, a.active { opacity: 1; }
+
+a#parent5.active .right, a.tab5 span.right { color: #fff !important; }
+
+@media (max-width: 768px) { ul.box { width: 70%; } }
+
+@-webkit-keyframes fadeIn {
+	  0% { opacity: 0; }
+	100% { opacity: 1; }
+}
+@keyframes fadeIn {
+	  0% { opacity: 0; }
+	100% { opacity: 1; }
+}
