--- a/styles.css
+++ b/styles.css
@@ -1,87 +1,68 @@
+@charset "utf-8";
+html { box-sizing: border-box; }
+*, *:before, *:after { box-sizing: inherit; }
+
 body {
-	/*background-image: url('Eva-Tree-Wallpaper.jpg'); */
-	/*background-size: cover;*/
-	
 	height: 100%;
 	margin: 0px;
-	/*background: url('backgrounds/rotate.php') no-repeat center center;*/
-	background: #282828 url('backgrounds/rotate.php') no-repeat center center;
+	//* background: #282828 url('backgrounds/rotate.php') no-repeat center center; */
+	background: #282828;
 	background-size: cover;
 	background-attachment: fixed;
-	
 	padding: 0;
 	font-family: 'Raleway', sans-serif;
+	
+	color: #D9D7DE;
+	-webkit-animation: fadeIn .25s ease-in .75s 1 both;
+	animation:         fadeIn .25s ease-in .75s 1 both;
+	font-size: 16px;
+	opacity: 0;
+	
 }
 
-
-.pageContainer {
-	height: 100%;
-	width: 100%;
-	position: absolute;
+.centerpiece {
+justify-content: center;
+align-items: center;
+overflow: hidden;
+height: 100vh;
+display: flex;
 }
 
-.vertAlignRow1 {
-	position: relative;
-	top: 35%;
-	transform: translateY(-50%);
-	width: 1000px;
-	margin: auto;
+.sidebar {
+height: 100%;
+width: 300px;
+left:0;
+top:0;
+position: absolute;
+border-right: 10px solid #414042;
+background-color: #000000;
+padding: 0;
+margin: 0;
+opacity: .85;
+font-family: "Raleway", "Times New Roman", Times, sans-serif;
 }
 
-.vertAlignRow2 {
-	position: relative;
-	top: 35%;
-	transform: translateY(-50%);
-	width: 1000px;
-	margin: auto;
-}
-
-.boxContainer {
-	display: table;
-	width: 100%;
-	border-spacing: 26px;
-}
-
-.box {
-	display: table-cell;
-	width: 33.3%;
-	height: 240px;
-	text-align: center;
-	background-color: #282828;
-	border: 10px solid #676a6b;
-	outline: #bebebe  solid 4px;
-	padding: 10px;
-	-webkit-box-shadow: 7px 7px 5px 1px rgba(0,0,0,0.6);
-	-moz-box-shadow: 7px 7px 5px 1px rgba(0,0,0,0.6);
-	box-shadow: 7px 7px 5px 1px rgba(0,0,0,0.6);
-    opacity: .90;
-}
+#background_cycler{padding:0;margin:0;width:100%;height:100%;position:absolute;top:0;left:0;z-index:-1;}
+#background_cycler div{position:absolute;left:0;top:0;width:100%;height:100%;z-index:1;background-color:white;background-size:cover;background-position:center center}
+#background_cycler div.active{z-index:3}
 
 .boxHeader {
 	font-size: 14pt;
 	text-align: center;
 	vertical-align: middle;
 	height: 22px;
-	color: #282828;
+	color: #FFFFFF;
     opacity: 1;
 }
 
-#boxHeader1 {
-	background-color: #a41c32;
-}
-
-#boxHeader2 {
-	background-color: #a41c32;
-}
-
-#boxHeader3 {
-	background-color: #a41c32;
+#boxHeader {
+	background-color: #CF0F04;
 }
 
 a:link,
 a:visited {
 	text-decoration: none;
-	color: #dddddd;
+	color: #D9D7DE;
 }
 
 ul {
@@ -107,8 +88,9 @@ ul {
 }
 
 .searchForm {
-	padding-left: 26px;
-	padding-right: 26px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 10px;
 }
 
 .searchInput {
@@ -117,13 +99,141 @@ ul {
 	margin: auto;
 	display: block;
 	padding: 5px 5px;
-	background-color: #282828;
-	border: 10px solid #676a6b;
+	background-color: #000000;
+	box-shadow: 7px 7px 5px 1px rgba(0,0,0,0.6);
+	font-size: 14pt;
+	color: #ffffff;
+	outline: #414042 solid 4px;
+    opacity: 1.0;
+	text-align: center;
+}
+
+.online {
+  padding: 2px 5px 2px 5px;
+  margin: 0;
+  display: inline;
+  background: #00BD14; 
+  color: #FFFFFF;
+}
+
+.offline {
+  padding: 2px 5px 2px 5px;
+  margin: 0;
+  display: inline;
+  background: #CF0F04;
+  color: #FFFFFF;
+}
+
+li div { text-align:right; }
+li div span { float:left; }
+
+
+ul.newBox {
+	display: block;
+	width: 40%;
+	text-align: center;
+	background-color: #000000;
+	border: 10px solid #414042;
+	border-radius: 10px;
+	padding: 0;
+	margin: 0;
 	-webkit-box-shadow: 7px 7px 5px 1px rgba(0,0,0,0.6);
 	-moz-box-shadow: 7px 7px 5px 1px rgba(0,0,0,0.6);
 	box-shadow: 7px 7px 5px 1px rgba(0,0,0,0.6);
-	font-size: 14pt;
-	color: #eff1f5;
-	outline: #bebebe  solid 4px;
-    opacity: .90;
+    opacity: .85;
+	font-family: "Raleway", "Times New Roman", Times, sans-serif;	
 }
+
+ul.subMenu {
+	list-style: none;
+	display: block;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+}
+
+a {
+	-webkit-transition: all .125s;
+	transition:         all .125s;
+	text-decoration: none;
+	display: block;
+	outline: none;
+	padding: 10px;
+	color: #B1B0B5;
+}
+
+a.plain {
+	-webkit-transition: all .125s;
+	transition:         all .125s;
+	text-decoration: none;
+	display: block;
+	outline: none;
+	padding: 0px;
+	padding-left: 10px;
+	color: #B1B0B5;
+}
+
+a:after {
+    -webkit-transform: translateX(-20px);
+    transform:         translateX(-20px);
+	-webkit-transition: all .125s;
+	transition:         all .125s;
+	content: "→";
+	opacity: 0;
+}
+a:hover:after, a.active:after {
+    -webkit-transform: translateX(0);
+	transform:         translateX(0);
+	-webkit-transition: all .125s;
+	transition:         all .125s;
+	padding-left: 6px;
+	opacity: 1;
+}
+p {
+	padding: 10px;
+	margin: 0;
+}
+
+span    { color: #D9D7DE; }
+.left   { float: left; }
+.clear  { clear: both; }
+.right  { float: right; }
+.center { text-align: center; }
+div.right, div.left { width: 50%; }
+
+a.parentLeft {
+	background-color: #5D0601;
+}
+a.parentRight {
+	background-color: #012C5D;
+}
+
+
+
+
+
+a#parent5.active .right, a.tab5 span.right { color: #fff !important; }
+
+@media (max-width: 768px) { ul.box { width: 70%; } }
+
+@-webkit-keyframes fadeIn {
+	  0% { opacity: 0; }
+	100% { opacity: 1; }
+}
+@keyframes fadeIn {
+	  0% { opacity: 0; }
+	100% { opacity: 1; }
+}
+
+
+::-webkit-input-placeholder { /* Chrome */
+  color: #B1B0B5;
+  transition: opacity 250ms ease-in-out;
+}
+:focus::-webkit-input-placeholder {
+  opacity: 0.5;
+}
+
+
+
+
