--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 	height: 100%;
 	margin: 0px;
 	//* background: #282828 url('backgrounds/rotate.php') no-repeat center center; */
-	background: #282828;
+	background-color: #282828;
 	background-size: cover;
 	background-attachment: fixed;
 	padding: 0;
@@ -19,6 +19,7 @@ body {
 	opacity: 0;
 	
 }
+
 
 .centerpiece {
 justify-content: center;
@@ -202,20 +203,20 @@ span    { color: #D9D7DE; }
 div.right, div.left { width: 50%; }
 
 a.parentLeft {
-	background-color: #5D0601;
+	background-color: #960B03;
 }
 a.parentRight {
-	background-color: #012C5D;
+	background-color: #044DA2;
 }
 
 
 
-ul > li:hover > a#parent1, a.tab1, a.tab1:hover, a#parent1:hover, a#parent1.active { background-color: #960B03; }
-ul > li:hover > a#parent2, a.tab2, a.tab2:hover, a#parent2:hover, a#parent2.active { background-color: #960B03; }
-ul > li:hover > a#parent3, a.tab3, a.tab3:hover, a#parent3:hover, a#parent3.active { background-color: #960B03; }
-ul > li:hover > a#parent4, a.tab4, a.tab4:hover, a#parent4:hover, a#parent4.active { background-color: #044DA2; }
-ul > li:hover > a#parent5, a.tab5, a.tab5:hover, a#parent5:hover, a#parent5.active { background-color: #044DA2; }
-ul > li:hover > a#parent6, a.tab6, a.tab6:hover, a#parent6:hover, a#parent6.active { background-color: #044DA2; }
+ul > li:hover > a#parent1, a.tab1, a.tab1:hover, a#parent1:hover, a#parent1.active { background-color: #5D0601; }
+ul > li:hover > a#parent2, a.tab2, a.tab2:hover, a#parent2:hover, a#parent2.active { background-color: #5D0601; }
+ul > li:hover > a#parent3, a.tab3, a.tab3:hover, a#parent3:hover, a#parent3.active { background-color: #5D0601; }
+ul > li:hover > a#parent4, a.tab4, a.tab4:hover, a#parent4:hover, a#parent4.active { background-color: #012C5D; }
+ul > li:hover > a#parent5, a.tab5, a.tab5:hover, a#parent5:hover, a#parent5.active { background-color: #012C5D; }
+ul > li:hover > a#parent6, a.tab6, a.tab6:hover, a#parent6:hover, a#parent6.active { background-color: #012C5D; }
 a#parent1:after, a#parent2:after, a#parent3:after, a#parent4:after, a#parent5:after, a#parent6:after { content: "↓"; }
 a#parent1.active:after, a#parent2.active:after, a#parent3.active:after, a#parent4.active:after, a#parent5.active:after, a#parent6.active:after { content: "↑"; }
 ul > li:hover > a#parent1, ul > li:hover > a#parent2, ul > li:hover > a#parent3, ul > li:hover > a#parent4, ul > li:hover > a#parent5, ul > li:hover > a#parent6, a:hover, a.active { opacity: 1; }
@@ -244,4 +245,6 @@ a#parent5.active .right, a.tab5 span.right { color: #fff !important; }
 
 
 
-
+canvas {
+  cursor: none;
+}
